--- a/index.html
+++ b/index.html
@@ -22,51 +22,55 @@
 
     <div class="container-banner">
         <div class="center">
+            <div>
+                <div class="container-list">
+                    <ul>
+                        <li>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sapiente at maiores quia saepe, earum ratione quas unde non sit sunt commodi </li>
+                    </ul>
 
-            <div class="container-list">
-                <ul>
-                    <li>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sapiente at maiores quia saepe, earum ratione quas unde non sit sunt commodi </li>
-                </ul>
+                    <ul>
+                        <li>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sapiente at maiores quia saepe, earum ratione quas unde non sit sunt commodi</li>
+                    </ul>
 
-                <ul>
-                    <li>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sapiente at maiores quia saepe, earum ratione quas unde non sit sunt commodi</li>
-                </ul>
+                    <ul>
+                        <li>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sapiente at maiores quia saepe, earum ratione quas unde non sit sunt commodi</li>
+                    </ul>
 
-                <ul>
-                    <li>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sapiente at maiores quia saepe, earum ratione quas unde non sit sunt commodi</li>
-                </ul>
+                </div><!--container-list-->
+            </div>
 
-            </div><!--container-list-->
+            <div>
+                <div class="form">
 
-            <div class="form">
+                    <h2>Preencha o formulário e inicie a sua caminhada para virar um webmaster!</h2>
 
-                <h2>Preencha o formulário e inicie a sua caminhada para virar um webmaster!</h2>
+                    <form>
+                        <div class="input-container">
+                            <span>Nome*</span>
+                            <input type="text" name="nome" required />
+                        </div><!--input-container-->
 
-                <form>
-                    <div class="input-container">
-                        <span>Nome*</span>
-                        <input type="text" name="nome" required />
-                    </div><!--input-container-->
+                        <div class="input-container">
+                            <span>E-mail*</span>
+                            <input type="text" name="nome" required />
+                        </div><!--input-container-->
 
-                    <div class="input-container">
-                        <span>E-mail*</span>
-                        <input type="text" name="nome" required />
-                    </div><!--input-container-->
+                        <div class="input-container">
+                            <span>Telefone*</span>
+                            <input type="text" name="nome" required />
+                        </div><!--input-container-->
 
-                    <div class="input-container">
-                        <span>Telefone*</span>
-                        <input type="text" name="nome" required />
-                    </div><!--input-container-->
+                        <p class="warning">*Campos obrigatórios</p>
+                        <div class="input-submit-container">
+                            <input type="submit" name="acao" value="Enviar">
+                        </div><!--input-submit-container-->
+                        
 
-                    <p class="warning">*Campos obrigatórios</p>
-                    <div class="input-submit-container">
-                        <input type="submit" name="acao" value="Enviar">
-                    </div><!--input-submit-container-->
-                    
+                    </form>
 
-                </form>
-
-            </div><!--form-->
+                </div><!--form-->
+            </div>
+            <div class="clear"></div>
         </div><!--center-->
 
     </div> <!--container banner-->
